tariffs page, anims

--- a/src/pug/blocks/brands.pug
+++ b/src/pug/blocks/brands.pug
@@ -1,7 +1,7 @@
 section.brands
 	.container.brands__container
 		.topic.brands__topic лидеры рынка
-		.brands__text.active Лидеры рынка уже делают клиентский сервис лучше
+		.brands__text Лидеры рынка уже делают клиентский сервис лучше
 		.brands__text.brands__text--right А команду эффективнее <br> с Autofaq
 	.brands__marquee.brands__marquee--mt.js-marquee-1
 		.brands__marquee-item
