--- a/src/pug/blocks/clients.pug
+++ b/src/pug/blocks/clients.pug
@@ -1,5 +1,7 @@
 section.clients
 	.clients__bg
+		.clients__title
+			p <span>Client</span> stories
 	.clients__grid
 		.clients__col
 			.clients-card.clients__item
