--- a/src/pug/partials/_header.pug
+++ b/src/pug/partials/_header.pug
@@ -1,4 +1,4 @@
-header.header
+header.header(class= headerMod ? headerMod : '')
 	.container.header__container
 		.header__about Cервис для роботизации службы поддержки клиентов или сотрудников в цифровых
 			|  каналах с помощью искусственного интеллекта
