--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,3 +45,6 @@
 @import "blocks/news-card";
 @import "blocks/news";
 @import "blocks/forecast";
+@import "blocks/tariffs-card";
+@import "blocks/tariffs";
+@import "blocks/cases";
