--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -169,6 +169,10 @@
 					letter-spacing: -0.015em;
 					color: rgba($white, 0.56);
 				}
+
+				@include hover {
+					text-decoration: underline;
+				}
 			}
 		}
 	}
