--- a/src/styles/blocks/clients.scss
+++ b/src/styles/blocks/clients.scss
@@ -2,6 +2,77 @@
 	$parent: &;
 
 	background: linear-gradient(353.32deg, #255ec1 21.3%, #47d6aa 94.76%);
+	position: relative;
+
+	&::before {
+		content: '';
+		display: block;
+		width: 1150px;
+		height: 1150px;
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='1080' height='1080' viewBox='0 0 1080 1080' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='540' cy='540' r='539.5' stroke='url(%23paint0_linear_253_18367)'/%3e%3cdefs%3e%3clinearGradient id='paint0_linear_253_18367' x1='777' y1='1.17873e-05' x2='274.5' y2='740.5' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='white'/%3e%3cstop offset='1' stop-color='white' stop-opacity='0'/%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e ");
+		background-repeat: no-repeat;
+		background-size: contain;
+		position: absolute;
+		top: 110px;
+		left: 50%;
+		transform: translateX(-50%);
+
+		@include max(lg) {
+			width: 259px;
+			height: 259px;
+			top: 35px;
+		}
+	}
+
+	&__bg {
+		padding-top: 325px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+
+		@include max(lg) {
+			padding-top: 0;
+		}
+	}
+
+	&__title {
+		font-size: 308.336px;
+		line-height: 308px;
+		letter-spacing: -16.0592px;
+		color: rgba($white, 0.22);
+		position: sticky;
+		top: 80px;
+		text-align: center;
+		overflow: hidden;
+		pointer-events: none;
+		box-sizing: border-box;
+
+		@include max(lg) {
+			width: calc(100% - 20px);
+			position: relative;
+			top: 20px;
+			left: 20px;
+			font-size: 45px;
+			line-height: 55px;
+			letter-spacing: -2px;
+			text-align: left;
+		}
+
+		p {
+			transform: translateX(26.3%);
+			transition: transform 1s ease-out;
+
+			@include max(lg) {
+				transform: translateX(0);
+			}
+		}
+
+		span {
+			color: $white;
+		}
+	}
 
 	&__grid {
 		display: flex;
