--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -43,6 +43,7 @@
 	&__slide {
 		display: flex;
 		justify-content: space-between;
+		cursor: pointer;
 
 		@include max(lg) {
 			flex-direction: column;
