--- a/src/styles/partials/slider-arrows.scss
+++ b/src/styles/partials/slider-arrows.scss
@@ -20,10 +20,25 @@
 
 		&:first-child {
 			margin-right: 8px;
+
+			@include hover {
+				svg {
+					transform: translateX(-2px);
+				}
+			}
+		}
+
+		&:last-child {
+			@include hover {
+				svg {
+					transform: translateX(2px);
+				}
+			}
 		}
 
 		svg {
 			fill: $white;
+			transition: transform 0.3s ease;
 		}
 	}
 }
