--- a/src/pug/partials/_sidebar.pug
+++ b/src/pug/partials/_sidebar.pug
@@ -39,7 +39,7 @@ aside.sidebar
 					img(src='images/bg-menu.jpg', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
-			a(href='#', target='_blank') Продукт
+			a(href='#', target='_blank') Решения
 			.sidebar__menu-inner
 				.sidebar__menu-content
 					.sidebar__menu-content-wrapper
@@ -72,7 +72,7 @@ aside.sidebar
 					img(src='images/bg-menu.jpg', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
-			a(href='#', target='_blank') Продукт
+			a(href='#', target='_blank') Кейсы
 			.sidebar__menu-inner
 				.sidebar__menu-content
 					.sidebar__menu-content-wrapper
@@ -105,7 +105,7 @@ aside.sidebar
 					img(src='images/bg-menu.jpg', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
-			a(href='#', target='_blank') Продукт
+			a(href='#', target='_blank') Тарифы
 			.sidebar__menu-inner
 				.sidebar__menu-content
 					.sidebar__menu-content-wrapper
@@ -138,7 +138,7 @@ aside.sidebar
 					img(src='images/bg-menu.jpg', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
-			a(href='#', target='_blank') Продукт
+			a(href='#', target='_blank') Ресурсы
 			.sidebar__menu-inner
 				.sidebar__menu-content
 					.sidebar__menu-content-wrapper
@@ -171,7 +171,7 @@ aside.sidebar
 					img(src='images/bg-menu.jpg', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
-			a(href='#', target='_blank') Продукт
+			a(href='#', target='_blank') Компания
 			.sidebar__menu-inner
 				.sidebar__menu-content
 					.sidebar__menu-content-wrapper
