--- a/src/styles/partials/sidebar.scss
+++ b/src/styles/partials/sidebar.scss
@@ -19,18 +19,18 @@
 		#{$parent} {
 			&__burger {
 				&::before {
-					transform: rotate(45deg) translateX(5px);
+					transform: rotate(45deg) translate(5px, 0);
 
 					@include max(lg) {
-
+						transform: rotate(45deg) translate(0, 5px);
 					}
 				}
 
 				&::after {
-					transform: rotate(-45deg) translateX(-5px);
+					transform: rotate(-45deg) translate(-5px, 0);
 
 					@include max(lg) {
-
+						transform: rotate(-45deg) translate(-3px,-4px);
 					}
 				}
 			}
@@ -128,6 +128,14 @@
 		pointer-events: none;
 		transition: opacity 0.3s ease;
 		background-color: $white;
+		overflow-y: auto;
+
+		@include max(lg) {
+			width: 100%;
+			height: calc(100vh - 50px);
+			top: 50px;
+			left: 0;
+		}
 
 		> li {
 			height: calc(100% / 6);
@@ -179,6 +187,10 @@
 		opacity: 0;
 		pointer-events: none;
 		transition: opacity 0.3s ease;
+
+		@include max(lg) {
+			display: none;
+		}
 
 		&.active {
 			opacity: 1;
