--- a/src/pug/blocks/services.pug
+++ b/src/pug/blocks/services.pug
@@ -9,20 +9,17 @@ section.services
 		.services__tabs-item
 			span IT-поддержка
 			.services__mobile-wrapper
-				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
-					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
+				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
 		.services__tabs-item
 			span HR-поддержка
 			.services__mobile-wrapper
-				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
-					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
+				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
 		.services__tabs-item
 			span Клиентская поддержка
 			.services__mobile-wrapper
-				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
-					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
+				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
 	.services__content(style='background-image: url("images/services/1.png")')
 		.services__content-item(style='display: flex')
@@ -32,20 +29,17 @@ section.services
 					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
 				+button('подробнее', 'services__btn', '#')
 		.services__content-item
-			.services__title <span>Поддержка розничной сети,</span> проектных команд
+			.services__title IT-поддержка
 			.services__bottom
-				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
-					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
+				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				+button('подробнее', 'services__btn', '#')
 		.services__content-item
-			.services__title <span>Поддержка розничной сети,</span> проектных команд
+			.services__title HR-поддержка
 			.services__bottom
-				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
-					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
+				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				+button('подробнее', 'services__btn', '#')
 		.services__content-item
-			.services__title <span>Поддержка розничной сети,</span> проектных команд
+			.services__title Клиентская поддержка
 			.services__bottom
-				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
-					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
+				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				+button('подробнее', 'services__btn', '#')
