--- a/src/styles/partials/sidebar.scss
+++ b/src/styles/partials/sidebar.scss
@@ -128,7 +128,6 @@
 		pointer-events: none;
 		transition: opacity 0.3s ease;
 		background-color: $white;
-		overflow-y: auto;
 
 		@include max(lg) {
 			width: 100%;
@@ -172,6 +171,16 @@
 				@include hover {
 					background-color: $blue-25;
 					color: $white;
+				}
+
+				@include max(sm) {
+					font-size: 40px;
+					line-height: 40px;
+				}
+
+				@include max(sm) {
+					font-size: 35px;
+					line-height: 35px;
 				}
 			}
 		}
@@ -235,6 +244,7 @@
 		justify-content: space-between;
 		background-color: $blue-25;
 		border-left: 1px solid rgba($white, 0.2);
+		overflow: auto;
 	}
 
 	&__menu-content-wrapper {
