--- a/src/pug/blocks/benefits.pug
+++ b/src/pug/blocks/benefits.pug
@@ -2,8 +2,9 @@ section.benefits(style='background-image: url("images/benefits/2.jpg")')
 	.container
 		.benefits__title Benefits
 	.benefits__wrapper
-		button.benefits__btn
+		.benefits__btn
 			+icon('refresh')(width='16', height='16')
+			.benefits__progress
 		.benefits__col
 			.benefits__accordion
 				.benefits__accordion-item.active
