--- a/src/pug/blocks/calculate.pug
+++ b/src/pug/blocks/calculate.pug
@@ -6,9 +6,9 @@ section.calculate
 		.calculate__middle
 			.calculate__calc
 				.calculate__calc-item
-					span.active Клиентская поддержка
-						button
-							+icon('chevron-down')(width='10', height='6')
+					select.js-calculate-select
+						option(value='Клиентская поддержка') Клиентская поддержка
+						option(value='Клиентская поддержка 2') Клиентская поддержка 2
 				.calculate__calc-item
 					span Сотрудников на поддержке
 					.range-value 50
