--- a/src/styles/blocks/benefits.scss
+++ b/src/styles/blocks/benefits.scss
@@ -12,6 +12,15 @@
 		background-size: 100% 40%;
 	}
 
+	&__progress {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 208px;
+		height: 208px;
+	}
+
 	&__btn {
 		display: flex;
 		align-items: center;
@@ -24,6 +33,8 @@
 		top: 186px;
 		left: 50%;
 		transform: translateX(-50%);
+		z-index: 1;
+		cursor: pointer;
 
 		@include max(lg) {
 			display: none;
@@ -38,16 +49,11 @@
 			transform: translate(-50%, -50%);
 		}
 
-		&::before {
-			width: 208px;
-			height: 208px;
-			background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='208' height='208' viewBox='0 0 208 208' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3crect opacity='0.2' x='-0.5' y='0.5' width='207' height='207' rx='103.5' transform='matrix(-1 0 0 1 207 0)' stroke='white'/%3e%3cpath d='M208 104.001C208 90.3435 205.31 76.8198 200.083 64.2019C194.857 51.584 187.196 40.1192 177.539 30.4619C167.882 20.8046 156.417 13.144 143.799 7.9175C131.181 2.69102 117.657 0.000975966 104 0.000976563V1.56097C117.453 1.56097 130.773 4.21066 143.202 9.35875C155.631 14.5068 166.924 22.0525 176.436 31.565C185.948 41.0774 193.494 52.3703 198.642 64.7989C203.79 77.2275 206.44 90.5484 206.44 104.001H208Z' fill='white'/%3e%3c/svg%3e ");
-		}
-
 		&::after {
 			width: 1080px;
 			height: 1080px;
 			background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='1080' height='1080' viewBox='0 0 1080 1080' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='540' cy='540' r='539.5' stroke='url(%23paint0_linear_253_18367)'/%3e%3cdefs%3e%3clinearGradient id='paint0_linear_253_18367' x1='777' y1='1.17873e-05' x2='274.5' y2='740.5' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='white'/%3e%3cstop offset='1' stop-color='white' stop-opacity='0'/%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e ");
+			pointer-events: none;
 		}
 
 		svg {
@@ -118,10 +124,16 @@
 	}
 
 	&__accordion {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
 		margin-top: -18px;
 		position: relative;
+		height: 730px;
 
 		@include max(lg) {
+			display: block;
+			height: auto;
 			margin-top: 57px;
 		}
 	}
