--- a/src/styles/blocks/forecast.scss
+++ b/src/styles/blocks/forecast.scss
@@ -1,4 +1,6 @@
 .forecast {
+	position: relative;
+
 	&__wrapper {
 		display: flex;
 		position: relative;
@@ -30,9 +32,7 @@
 			border-right: 1px solid rgba($white, 0.3);
 		}
 
-		&::before {
-			content: '';
-			display: block;
+		.forecast__diag {
 			width: 100%;
 			position: absolute;
 			bottom: 0;
@@ -41,9 +41,10 @@
 
 		&:first-of-type {
 			padding-left: 71px;
+			overflow: hidden;
 
-			&::before {
-				height: 56%;
+			.forecast__diag {
+				height: 0;
 				background: rgba($white, 0.1);
 			}
 		}
@@ -51,8 +52,8 @@
 		&:nth-of-type(2) {
 			padding-left: 40px;
 
-			&::before {
-				height: 70%;
+			.forecast__diag {
+				height: 0;
 				background: rgba($white, 0.1);
 			}
 		}
@@ -61,8 +62,8 @@
 			padding-left: 46px;
 			padding-right: 56px;
 
-			&::before {
-				height: 82%;
+			.forecast__diag {
+				height: 0;
 				background: rgba($white, 0.1);
 				backdrop-filter: blur(24px);
 			}
@@ -219,6 +220,10 @@
 		position: absolute;
 		left: 0;
 		bottom: 15%;
+
+		&--dark {
+			color: rgba($white, 0.1);
+		}
 	}
 
 	&__request {
