--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -162,6 +162,7 @@
 				font-size: 16px;
 				line-height: 19px;
 				color: rgba($white, 0.3);
+				transition: color 0.3s ease;
 
 				@include max(xl) {
 					font-size: 12px;
@@ -171,7 +172,7 @@
 				}
 
 				@include hover {
-					text-decoration: underline;
+					color: $white;
 				}
 			}
 		}
