--- a/src/pug/pages/cases.pug
+++ b/src/pug/pages/cases.pug
@@ -15,7 +15,7 @@ block main
 				.cases__text <span>Наши клиенты – смелые инноваторы,</span> лидеры рынка в своих нишах
 		.cases__grid
 			.clients__col
-				.clients-card.cases__item
+				.clients-card.clients-card--simple.cases__item
 					.clients-card__client
 						.clients-card__client-name Фосагро
 						.clients-card__client-logo
@@ -24,19 +24,10 @@ block main
 							.clients-card__toggle
 						.clients-card__inner
 							.clients-card__top
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 								.clients-card__icon
-									+icon('rostelekom-2')(width='62', height='102')
+									+icon('rostelekom-3')(width='221', height='69')
 							.clients-card__middle
-								.clients-card__person
-									.clients-card__avatar
-										img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
-									.clients-card__author
-										p Михаил Осеевский
-										p CEO
-								.clients-card__comment «Внедрение Autofaq в наши процессы позволио освободить от рутины более
-									|  половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-									|  показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 							.clients-card__bottom
 								.clients-card__bottom-item
 									p ₽20М
@@ -44,7 +35,7 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.cases__item
+				.clients-card.clients-card--simple.cases__item
 					.clients-card__client
 						.clients-card__client-name Фосагро
 						.clients-card__client-logo
@@ -53,19 +44,10 @@ block main
 							.clients-card__toggle
 						.clients-card__inner
 							.clients-card__top
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 								.clients-card__icon
-									+icon('rostelekom-2')(width='62', height='102')
+									+icon('rostelekom-3')(width='221', height='69')
 							.clients-card__middle
-								.clients-card__person
-									.clients-card__avatar
-										img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
-									.clients-card__author
-										p Михаил Осеевский
-										p CEO
-								.clients-card__comment «Внедрение Autofaq в наши процессы позволио освободить от рутины более
-									|  половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-									|  показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 							.clients-card__bottom
 								.clients-card__bottom-item
 									p ₽20М
@@ -73,7 +55,7 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.cases__item
+				.clients-card.clients-card--simple.cases__item
 					.clients-card__client
 						.clients-card__client-name Мегафон
 						.clients-card__client-logo
@@ -82,19 +64,10 @@ block main
 							.clients-card__toggle
 						.clients-card__inner
 							.clients-card__top
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 								.clients-card__icon
-									+icon('rostelekom-2')(width='62', height='102')
+									+icon('rostelekom-3')(width='221', height='69')
 							.clients-card__middle
-								.clients-card__person
-									.clients-card__avatar
-										img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
-									.clients-card__author
-										p Михаил Осеевский
-										p CEO
-								.clients-card__comment «Внедрение Autofaq в наши процессы позволио освободить от рутины более
-									|  половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-									|  показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 							.clients-card__bottom
 								.clients-card__bottom-item
 									p ₽20М
@@ -103,7 +76,7 @@ block main
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
 			.clients__col
-				.clients-card.cases__item
+				.clients-card.clients-card--simple.cases__item
 					.clients-card__client
 						.clients-card__client-name PWC
 						.clients-card__client-logo
@@ -112,19 +85,10 @@ block main
 							.clients-card__toggle
 						.clients-card__inner
 							.clients-card__top
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 								.clients-card__icon
-									+icon('rostelekom-2')(width='62', height='102')
+									+icon('rostelekom-3')(width='221', height='69')
 							.clients-card__middle
-								.clients-card__person
-									.clients-card__avatar
-										img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
-									.clients-card__author
-										p Михаил Осеевский
-										p CEO
-								.clients-card__comment «Внедрение Autofaq в наши процессы позволио освободить от рутины более
-									|  половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-									|  показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 							.clients-card__bottom
 								.clients-card__bottom-item
 									p ₽20М
@@ -132,7 +96,7 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.cases__item
+				.clients-card.clients-card--simple.cases__item
 					.clients-card__client
 						.clients-card__client-name Сколково
 						.clients-card__client-logo
@@ -141,19 +105,10 @@ block main
 							.clients-card__toggle
 						.clients-card__inner
 							.clients-card__top
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 								.clients-card__icon
-									+icon('rostelekom-2')(width='62', height='102')
+									+icon('rostelekom-3')(width='221', height='69')
 							.clients-card__middle
-								.clients-card__person
-									.clients-card__avatar
-										img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
-									.clients-card__author
-										p Михаил Осеевский
-										p CEO
-								.clients-card__comment «Внедрение Autofaq в наши процессы позволио освободить от рутины более
-									|  половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-									|  показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
 							.clients-card__bottom
 								.clients-card__bottom-item
 									p ₽20М
