single page, single news

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
 @import "partials/header";
 @import "partials/footer";
 @import "partials/slider-arrows";
+@import "partials/breadcrumbs";
 
 
 /*blocks*/
@@ -49,3 +50,4 @@
 @import "blocks/tariffs";
 @import "blocks/cases";
 @import "blocks/news-page";
+@import "blocks/news-single";
