cases-single page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,3 +51,5 @@
 @import "blocks/cases";
 @import "blocks/news-page";
 @import "blocks/news-single";
+@import "blocks/cases-card";
+@import "blocks/cases-single";
