--- a/src/styles/blocks/advantages.scss
+++ b/src/styles/blocks/advantages.scss
@@ -2,9 +2,11 @@
 	display: flex;
 	align-items: flex-start;
 	background-color: $blue-25;
+	padding-bottom: 340px;
 
 	@include max(lg) {
 		flex-direction: column;
+		padding-bottom: 0;
 	}
 
 	&__item {
@@ -12,22 +14,6 @@
 
 		@include max(lg) {
 			width: 100%;
-		}
-
-		&:nth-child(2) {
-			margin-top: 178px;
-
-			@include max(lg) {
-				margin-top: 0;
-			}
-		}
-
-		&:nth-child(3) {
-			margin-top: 340px;
-
-			@include max(lg) {
-				margin-top: 0;
-			}
 		}
 	}
 }
