--- a/src/pug/blocks/about.pug
+++ b/src/pug/blocks/about.pug
@@ -19,4 +19,4 @@ section.about
 			'RPA модуль позволяет создавать интеграции без доработок системы на основе событийной модели.</p>',
 		'2',
 		'about-card--blue about__item'
-	)
+	)(data-speed='15')
