--- a/src/pug/blocks/services.pug
+++ b/src/pug/blocks/services.pug
@@ -22,7 +22,7 @@ section.services
 				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
 	.services__content(style='background-image: url("images/services/1.png")')
-		.services__content-item(style='display: flex')
+		.services__content-item.active
 			.services__title <span>Поддержка розничной сети,</span> проектных команд
 			.services__bottom
 				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
