--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -3,6 +3,38 @@
 	position: relative;
 	z-index: 100;
 
+	&::before,
+	&::after {
+		content: '';
+		display: block;
+		width: 100%;
+		height: 50%;
+		position: absolute;
+		left: 0;
+		z-index: -1;
+	}
+
+	&::before {
+		top: 0;
+		background-image: linear-gradient(
+				-45deg,
+				hsl(218deg 68% 45%) 0%,
+				hsl(188deg 53% 47%) 0%,
+				hsl(162deg 64% 56%) 72%,
+				hsl(162deg 53% 47%) 7%
+		);
+	}
+
+	&::after {
+		bottom: 0;
+		background-image: linear-gradient(
+				180deg,
+				hsl(218deg 68% 45%) 0%,
+				hsl(188deg 53% 47%) 57%,
+				hsl(162deg 64% 56%) 135%
+		);
+	}
+
 	@include max(lg) {
 		flex-direction: column;
 	}
@@ -16,7 +48,7 @@
 		}
 
 		&:nth-child(even) {
-			top: -191px;
+			//top: -191px;
 
 			@include max(lg) {
 				top: 0;
