--- a/src/styles/blocks/services.scss
+++ b/src/styles/blocks/services.scss
@@ -93,6 +93,10 @@
 		justify-content: space-between;
 		height: 100%;
 		padding: 57px 54px;
+
+		&.active {
+			display: flex;
+		}
 	}
 
 	&__title {
