--- a/src/pug/pages/news-page.pug
+++ b/src/pug/pages/news-page.pug
@@ -12,7 +12,7 @@ block main
 		.container.news-page__container
 			.news-page__title Новости
 		.news-page__wrapper
-			each item in NEWS
+			each item in NEWS_PAGE
 				+news-card(
 					item.img,
 					'',
