--- a/src/pug/layouts/vars.pug
+++ b/src/pug/layouts/vars.pug
@@ -57,6 +57,65 @@
 		}
 	];
 
+	const NEWS_PAGE = [
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		},
+		{
+			img: '1',
+			day: '23',
+			month: 'января',
+			year: '2022',
+			text: 'Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно'
+		}
+	];
+
 	const PUBLISH = [
 		{
 			brand: '1',
