--- a/src/styles/blocks/first-screen.scss
+++ b/src/styles/blocks/first-screen.scss
@@ -72,13 +72,15 @@
 		}
 
 		@media (min-width: 1280px) and (max-height: 1060px) {
-			font-size: 300px;
-			line-height: 320px;
+			/*font-size: 300px;
+			line-height: 320px;*/
+			margin-top: -150px;
 		}
 
 		@media (min-width: 1280px) and (max-height: 920px) {
 			font-size: 250px;
 			line-height: 270px;
+			margin-top: 0;
 		}
 
 		@include max(lg) {
