--- a/src/pug/pages/cases-single.pug
+++ b/src/pug/pages/cases-single.pug
@@ -11,7 +11,7 @@ block main
 	article.cases-single
 		.cases-single__top
 			.container
-				.cases-single__title 585 Золотой
+				h1.cases-single__title 585 Золотой
 				.cases-single__sibtitle Кейс компании
 		.container.cases-single__container
 			.cases-single__company-icon
