--- a/src/pug/pages/cases.pug
+++ b/src/pug/pages/cases.pug
@@ -11,7 +11,7 @@ block main
 	article.cases
 		.container
 			.cases__full-screen
-				.cases__title Сases
+				h1.cases__title Сases
 				.cases__text <span>Наши клиенты – смелые инноваторы,</span> лидеры рынка в своих нишах
 		.cases__grid
 			.clients__col
