--- a/src/pug/pages/news-page.pug
+++ b/src/pug/pages/news-page.pug
@@ -10,7 +10,7 @@ block vars
 block main
 	article.news-page
 		.container.news-page__container
-			.news-page__title Новости
+			h1.news-page__title Новости
 		.news-page__wrapper
 			each item in NEWS_PAGE
 				+news-card(
