--- a/src/pug/pages/news-single.pug
+++ b/src/pug/pages/news-single.pug
@@ -10,7 +10,7 @@ block main
 	article.news-single
 		.news-single__top
 			.container
-				.news-single__title <span>Лидеры рынка уже делают</span> клиентский сервис лучше
+				h1.news-single__title <span>Лидеры рынка уже делают</span> клиентский сервис лучше
 		.container
 			.news-single__wrapper
 				.news-single__left
