--- a/src/pug/pages/tariffs.pug
+++ b/src/pug/pages/tariffs.pug
@@ -10,7 +10,7 @@ block vars
 block main
 	article.tariffs
 		.container
-			.tariffs__title Tariffs
+			h1.tariffs__title Tariffs
 		.tariffs__wrapper
 			.tariffs__col
 				.tariffs__consult
