--- a/src/pug/pages/news-single-2.pug
+++ b/src/pug/pages/news-single-2.pug
@@ -16,7 +16,7 @@ block main
 				], 'breadcrumbs--white')
 		.news-single__top
 			.container
-				.news-single__title <span>Лидеры рынка уже делают</span> клиентский сервис лучше
+				h1.news-single__title <span>Лидеры рынка уже делают</span> клиентский сервис лучше
 		.container
 			.news-single__wrapper
 				.news-single__left
