--- a/src/styles/partials/main.scss
+++ b/src/styles/partials/main.scss
@@ -31,6 +31,10 @@ nav {
 	padding: 0;
 }
 
+h1 {
+	font-weight: 400;
+}
+
 input,
 button {
 	-webkit-appearance: none;
@@ -63,7 +67,7 @@ textarea {
 .container {
 	max-width: 100%;
 	width: 1710px;
-	padding: 0 15px;
+	padding: 0 30px;
 	margin: 0 auto;
 
 	@include max(lg) {
